aws/pr_review/security_groups.tf
#
# Security group allowing the lambda forms-client PR review environment to communicate
# with Redis, DB, and receive recieve HTTPS requests.
#
resource "aws_security_group" "lambda_client_pr_review" {
  name        = "lambda-admin-pr-review"
  description = "Lambda admin PR review environment"
  vpc_id      = var.vpc_id

  tags = var.core_tags
}

resource "aws_security_group_rule" "internet_ingress_to_lambda_client" {
  description       = "Allow inbound connections from the internet to the lambda PR review env"
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  security_group_id = aws_security_group.lambda_client_pr_review.id
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "lambda_client_egress_to_internet" {
  description       = "Allow outbound connections from lambda PR review env to the internet"
  type              = "egress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  security_group_id = aws_security_group.lambda_client_pr_review.id
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "lambda_client_egress_privatelink" {
  description              = "Security group rule for Forms egress through privatelink"
  type                     = "egress"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.lambda_client_pr_review.id
  source_security_group_id = var.privatelink_security_group_id
}

resource "aws_security_group_rule" "privatelink_lambda_client_ingress" {
  description              = "Security group rule for Forms ingress"
  type                     = "ingress"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = var.privatelink_security_group_id
  source_security_group_id = aws_security_group.lambda_client_pr_review.id
}

resource "aws_security_group_rule" "lambda_client_egress_database" {
  description              = "Security group rule for Forms DB egress to Database"
  type                     = "egress"
  from_port                = 5432
  to_port                  = 5432
  protocol                 = "tcp"
  security_group_id        = aws_security_group.lambda_client_pr_review.id
  source_security_group_id = var.forms_database_security_group_id
}

resource "aws_security_group_rule" "database_lambda_client_ingress" {
  description              = "Security group rule for Forms DB ingress"
  type                     = "ingress"
  from_port                = 5432
  to_port                  = 5432
  protocol                 = "tcp"
  security_group_id        = var.forms_database_security_group_id
  source_security_group_id = aws_security_group.lambda_client_pr_review.id
}

resource "aws_security_group_rule" "lambda_client_egress_redis" {
  description              = "Security group rule for Forms DB egress to Redis"
  type                     = "egress"
  from_port                = 6379
  to_port                  = 6379
  protocol                 = "tcp"
  security_group_id        = aws_security_group.lambda_client_pr_review.id
  source_security_group_id = var.forms_redis_security_group_id
}

resource "aws_security_group_rule" "redis_lambda_client_ingress" {
  description              = "Security group rule for Forms Redis ingress"
  type                     = "ingress"
  from_port                = 6379
  to_port                  = 6379
  protocol                 = "tcp"
  security_group_id        = var.forms_redis_security_group_id
  source_security_group_id = aws_security_group.lambda_client_pr_review.id
}

# Local communication with IdP

resource "aws_security_group_rule" "local_pr_review_env_to_idp_egress" {
  description              = "Allow PR review environment to communicate with IdP on port 8080"
  type                     = "egress"
  security_group_id        = aws_security_group.lambda_client_pr_review.id
  source_security_group_id = var.idp_ecs_security_group_id
  protocol                 = "tcp"
  from_port                = 8080
  to_port                  = 8080
}

resource "aws_security_group_rule" "local_pr_review_env_to_idp_ingress" {
  description              = "Allow IdP to receive communication from PR review environment on port 8080"
  type                     = "ingress"
  security_group_id        = var.idp_ecs_security_group_id
  source_security_group_id = aws_security_group.lambda_client_pr_review.id
  protocol                 = "tcp"
  from_port                = 8080
  to_port                  = 8080
}
